--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body{
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+  scrollbar-width: thin;
+    
+}
