✨ feat: update Hero and BannerGenerator components; enhance layout and styles, add preview and form sections

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-
-body{
-    overflow-x: hidden;
-    scroll-behavior: smooth;
+* {
+  scroll-behavior: smooth;
   scrollbar-width: thin;
-    
+  
+}
+html, body{
+    overflow-x: hidden;
 }
