--- a/app/globals.css
+++ b/app/globals.css
@@ -33,3 +33,33 @@
   font-display: swap;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Chillax-Variable";
+  src: url("../fonts/Chillax-Variable.woff2") format("woff2"),
+    url("../fonts/Chillax-Variable.woff") format("woff"),
+    url("../fonts/Chillax-Variable.ttf") format("truetype");
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Satoshi-Variable";
+  src: url("../fonts/Satoshi-Variable.woff2") format("woff2"),
+    url("../fonts/Satoshi-Variable.woff") format("woff"),
+    url("../fonts/Satoshi-Variable.ttf") format("truetype");
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Excon-Variable";
+  src: url("../fonts/Excon-Variable.woff2") format("woff2"),
+    url("../fonts/Excon-Variable.woff") format("woff"),
+    url("../fonts/Excon-Variable.ttf") format("truetype");
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: normal;
+}
